--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,13 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
   </head>
 
   <body>
-    <div class="w-full h-screen">
+    <div class="w-full h-content bg-gray-200">
       <%= yield %>
 
-      <div class="h-11"></div>
     </div>
   </body>
 </html>
