--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,30 +52,4 @@
  </div>
 </div>
 
-<footer class="h-[50vh] w-screen bg-blue-900 px-8">
-  <div class="h-full w-11/12 m-auto flex flex-row justify-between items-center">
-    <div class="text-white">
-      <p class="text-lg font-medium mb-4">Contact Us</p>
-  
-      <ul class="space-y-1">
-        <li>Email : <span>support@inventorymanagement.com</span></li>
-        <li>Phone : <span>+1-123-123-1234</span></li>
-        <li>Address : <span>123 Inventory Lane, Suite 456, Business City, BC 78910</span></li>
-      </ul>
-    </div>
-  
-    <div class="text-white">
-      <p class="text-lg font-medium mb-4">Follow Us</p>
-  
-      <ul class="space-y-1">
-        <li>Facebook : <span>@inventory_management</span></li>
-        <li>Instagram : <span>@inventory_management</span></li>
-        <li>Twitter : <span>@inventory_management</span></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="h-8 w-full flex justify-center items-center font-semibold">
-    <p>© 2024 Inventory Solutions Inc. All rights reserved.</p>
-  </div>
-</footer>
+<%= render 'shared/main_page_footer' %>
