--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -1,4 +1,4 @@
-<section class="bg-gray-50 dark:bg-gray-900">
+<section class="">
   <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
       <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
           <p>Inventory Management System</p> 
@@ -24,7 +24,7 @@
                       <div class="flex items-start">
                           <p class="text-gray-500 dark:text-gray-300 text-sm">Terms & Conditions Applied.</p>
                       </div>
-                      <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
+                      <a href="/admin/request" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
                   </div>
                   
                   <%= form.submit "Log in", class: "w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
