--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,15 +12,15 @@
 
     <p class="text-white text-normal text-sm pb-3">Streamline your business operations with our cutting-edge inventory management solution. Our platform ensures real-time tracking, efficient stock control, and automated processes, saving you time and reducing errors. Experience the ease of managing your inventory effortlessly and watch your sales soar as you focus on what matters most—growing your business.</p>
 
-    <button class="w-full h-11 bg-blue-500 text-white text-sm font normal leading-tight rounded-md hover:bg-slate-700 transition transform-transition">
+    <a href="/contact-us"><button class="w-full h-11 bg-blue-500 text-white text-sm font normal leading-tight rounded-md hover:bg-slate-700 transition transform-transition">
       Contact Now to get it!
-    </button>
+    </button></a>
   </div>
 </div>
 
 <div class="h-24"></div>
 
-<div class="h-[90vh] w-[80vw] flex flex-col items-center m-auto space-y-8">
+<div class="h-[70vh] w-[80vw] flex flex-col items-center m-auto space-y-8">
   <div class="h-[25vh] w-full flex flex-row justify-between items-center">
     <div class="w-1/3 h-full flex justify-center items-center ">
       <%= image_tag 'in_mang_1.png', class:"w-96 "%>
@@ -51,5 +51,7 @@
     </div>
  </div>
 </div>
+
+<%= render 'blog_part' %>
 
 <%= render 'shared/main_page_footer' %>
