--- a/app/views/admin/new.html.erb
+++ b/app/views/admin/new.html.erb
@@ -12,17 +12,27 @@
               <div class="space-y-4 md:space-y-6">
                   <div>
                       <%= form.label :name, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white"   %>
-                      <%= form.text_field :name, class: "bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", placeholder: "xyz", required: true %>
+                      <%= form.text_field :name, class: "bg-gray-50  border #{ @admin.errors[:name].any? ? 'border-red-600' : 'border-gray-300' } border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", placeholder: "xyz", required: true %>
+                      <span class="px-2 text-red-600 text-sm">
+                        <%= @admin.errors[:name]&.first %>
+                      </span>
+
                   </div>
 
                   <div>
                       <%= form.label :email, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
-                      <%= form.email_field :email, class: "bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", placeholder: "name@company.com", required: true %>
+                      <%= form.email_field :email, class: "bg-gray-50 border #{ @admin.errors[:email].any? ? 'border-red-600' : 'border-gray-300' } border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", placeholder: "name@company.com", required: true %>
+                      <span class="px-2 text-red-600 text-sm">
+                        <%= @admin.errors[:email]&.first %>
+                      </span>
                   </div>
 
                   <div>
                         <%= form.label :password, "Password", class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
-                        <%= form.password_field :password, placeholder: "••••••••", class: "bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", required: true %>
+                        <%= form.password_field :password, placeholder: "••••••••", class: "bg-gray-50 border #{ @admin.errors[:password].any? ? 'border-red-600' : 'border-gray-300' } text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500", required: true %>
+                       <span class="px-2 text-red-600 text-sm">
+                        <%= @admin.errors[:password]&.first %>
+                      </span>
                   </div>
 
                   <div>
