Dashboard UI completed

--- a/app/views/dashboard/_modals.html.erb
+++ b/app/views/dashboard/_modals.html.erb
@@ -1,5 +1,5 @@
 <!-- Create modal -->
-<div id="createProductModal" tabindex="-1" aria-hidden="true" :class=" createProductModal ? 'flex' : 'hidden'" class=" overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+<div id="createProductModal" tabindex="-1" aria-hidden="true" :class=" createProductModal ? 'flex' : 'hidden'" class=" overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] min-h-screen bg-dark/90">
     <div class="relative p-4 w-full max-w-2xl max-h-full">
         <!-- Modal content -->
         <div class="relative p-4 bg-white rounded-lg shadow dark:bg-gray-800 sm:p-5">
@@ -31,7 +31,12 @@
     <div>
       <div>
       <%= form.label :category_id, 'Category', class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-white' %>
-      <%= form.collection_select :category_id, @categories, :id, :name, prompt: 'Select category', class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500' %>
+      <select name="category_id" id="category_id" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full px-2 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <option value="">Select category</option>
+        <% @categories.each do |category| %>
+        <option value="<%= category.id %>"><%= category.name %></option>
+        <% end %>
+      </select>
     </div>
     </div>
   </div>
