--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,11 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   </head>
 
   <body>
-    <div class="w-full h-content bg-gray-200">
+    <div class="w-full h-content bg-gray-200" x-data="{'signOut': false, 'createProductModal': false}" x-cloak>
       <div id="flash">
         <%= render "shared/flash" unless flash.empty? %>
       </div>
