--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       'createProductModal': false, 
       'editProductModal': false,
       'selectedProduct' : null,
+      'deleteModal': false,
       }" x-cloak>
       <div id="flash">
         <%= render "shared/flash" unless flash.empty? %>
